--- a/GetSchwitfy.View/Board.html
+++ b/GetSchwitfy.View/Board.html
@@ -10,6 +10,12 @@
     
 </head>
 <body>
+    <script src="C:\Code\GetSchwitfy\GetSchwitfy.Controller\GameSolvableChecker.js"></script>
+    <script src="C:\Code\GetSchwitfy\GetSchwitfy.Controller\VictoryChecker.js"></script>
+    <script src="C:\Code\GetSchwitfy\GetSchwitfy.View\Modules\WinnerNotifier.js"></script>
+    <script src="C:\Code\GetSchwitfy\GetSchwitfy.View\Modules\ButtonUpdater.js"></script>
+    <script src="C:\Code\GetSchwitfy\GetSchwitfy.Controller\SquareMovementHandler.js"></script>
+    <script src="C:\Code\GetSchwitfy\GetSchwitfy.View\Modules\ButtonsEventHandler.js"></script>
     <script src="C:\Code\GetSchwitfy\GetSchwitfy.Model\SquareModel.js"></script>
     <script src="C:\Code\GetSchwitfy\GetSchwitfy.Model\GameBoardModel.js"></script>
     <script src="C:\Code\GetSchwitfy\GetSchwitfy.Controller\GameSquaresInitializer.js"></script>
