initialize Input Board Size in the bootstrapper

--- a/GetSchwitfy.View/Board.html
+++ b/GetSchwitfy.View/Board.html
@@ -10,6 +10,7 @@
     
 </head>
 <body>
+    <script src="C:\Code\GetSchwitfy\GetSchwitfy.View\Modules\InputBoardSize.js" ></script>
     <script src="C:\Code\GetSchwitfy\GetSchwitfy.Controller\GameSolvableChecker.js"></script>
     <script src="C:\Code\GetSchwitfy\GetSchwitfy.Controller\VictoryChecker.js"></script>
     <script src="C:\Code\GetSchwitfy\GetSchwitfy.View\Modules\WinnerNotifier.js"></script>
