Board.html: added InputName script

--- a/GetSchwitfy.View/Board.html
+++ b/GetSchwitfy.View/Board.html
@@ -10,20 +10,21 @@
     
 </head>
 <body>
-    <script src="C:\Code\GetSchwitfy\GetSchwitfy.View\Modules\BoardEraser.js"></script>
-    <script src="C:\Code\GetSchwitfy\GetSchwitfy.View\Modules\InputBoardSize.js" ></script>
-    <script src="C:\Code\GetSchwitfy\GetSchwitfy.Controller\GameSolvableChecker.js"></script>
-    <script src="C:\Code\GetSchwitfy\GetSchwitfy.Controller\VictoryChecker.js"></script>
-    <script src="C:\Code\GetSchwitfy\GetSchwitfy.View\Modules\WinnerNotifier.js"></script>
-    <script src="C:\Code\GetSchwitfy\GetSchwitfy.View\Modules\ButtonUpdater.js"></script>
-    <script src="C:\Code\GetSchwitfy\GetSchwitfy.Controller\SquareMovementHandler.js"></script>
-    <script src="C:\Code\GetSchwitfy\GetSchwitfy.View\Modules\ButtonsEventHandler.js"></script>
-    <script src="C:\Code\GetSchwitfy\GetSchwitfy.Model\SquareModel.js"></script>
-    <script src="C:\Code\GetSchwitfy\GetSchwitfy.Model\GameBoardModel.js"></script>
-    <script src="C:\Code\GetSchwitfy\GetSchwitfy.Controller\GameSquaresInitializer.js"></script>
-    <script src="C:\Code\GetSchwitfy\GetSchwitfy.Controller\GameController.js"></script>
-    <script src="C:\Code\GetSchwitfy\GetSchwitfy.View\Modules\GameView.js"></script>
-    <script src="C:\Code\GetSchwitfy\GetSchwitfy.View\Modules\BoardPrinter.js"></script>
-    <script src="C:\Code\GetSchwitfy\GetSchwitfy.View\Modules\Bootsrapper.js"></script>
+    <script src="Modules/InputPlayerName.js"></script>
+    <script src="Modules/BoardEraser.js"></script>
+    <script src="Modules/InputBoardSize.js" ></script>
+    <script src="../GetSchwitfy.Controller/GameSolvableChecker.js"></script>
+    <script src="../GetSchwitfy.Controller/VictoryChecker.js"></script>
+    <script src="Modules/WinnerNotifier.js"></script>
+    <script src="Modules/ButtonUpdater.js"></script>
+    <script src="../GetSchwitfy.Controller/SquareMovementHandler.js"></script>
+    <script src="Modules/ButtonsEventHandler.js"></script>
+    <script src="../GetSchwitfy.Model/SquareModel.js"></script>
+    <script src="../GetSchwitfy.Model/GameBoardModel.js"></script>
+    <script src="../GetSchwitfy.Controller/GameSquaresInitializer.js"></script>
+    <script src="../GetSchwitfy.Controller/GameController.js"></script>
+    <script src="Modules/GameView.js"></script>
+    <script src="Modules/BoardPrinter.js"></script>
+    <script src="Modules/Bootsrapper.js"></script>
 </body>
 </html>
