Board: present html elements to the page, added script of gameContainerModels

--- a/GetSchwitfy.View/Board.html
+++ b/GetSchwitfy.View/Board.html
@@ -12,6 +12,8 @@
 <body>
     <script src="Modules/InputPlayerName.js"></script>
     <script src="Modules/BoardEraser.js"></script>
+    <script src="../GetSchwitfy.Model/GameModel.js"></script>
+    <script src="../GetSchwitfy.Model/GamesContainerModel.js"></script>
     <script src="Modules/InputBoardSize.js" ></script>
     <script src="../GetSchwitfy.Controller/GameSolvableChecker.js"></script>
     <script src="../GetSchwitfy.Controller/VictoryChecker.js"></script>
